# mpi_tasks_2022

./: README.md
hwmp/: .gitignore  CMakeLists.txt  main.cpp
hwmp/tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
